--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.o
 *.obj
 
+debug/*
 # Precompiled Headers
 *.gch
 *.pch
@@ -39,3 +40,11 @@
 
 # debug information files
 *.dwo
+
+# Build
+build/
+CMakeCache.txt
+CMakeFiles/
+Makefile
+cmake_install.cmake
+compile_commands.json
